--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.14)
 project(Sies C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Sies main.c old/piece.c old/board.c old/chess.c)
+add_executable(Sies main.c chess.c board.c board.h)
