--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Sies C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Sies main.c chess.c board.c board.h)
+add_executable(Sies main.c chess.c)
